# whoopsy

./: .envrc  Cargo.toml  flake.nix
src/: auth.rs  client.rs  error.rs  lib.rs  main.rs  models.rs
