[package]
name = "whoopsy"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"]  }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
